--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -20,12 +20,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, you will\n",
+    "You'll learn how to manage a growing number of flow cytometry data batches as a single queryable dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Specifically, you will\n",
     "\n",
     "1. read a single `.fcs` file as an `AnnData` and seed a versioned dataset with it\n",
-    "2. append a new data batch (a new `.fcs` file) to create a new version of the dataset\n",
-    "3. look at an overview of ingested files and cell markers\n",
-    "4. query the data and store analytical results as plots\n",
+    "2. append a new data batch (a new `.fcs` file) to create a new version of the dataset ([here](facs1))\n",
+    "3. query individual files and cell markers ([here](facs2))\n",
+    "4. analyze the dataset and store results as plots ([here](facs3))\n",
     "\n",
     "```{toctree}\n",
     ":maxdepth: 1\n",
@@ -137,6 +144,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "It has the following features:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata.var.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Transform: normalize ![](https://img.shields.io/badge/Transform-10b981)"
    ]
   },
@@ -157,12 +180,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we'll split the signal from heigh and area metadata:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pm.pp.split_signal(adata, var_key=\"channel\")"
+    "pm.pp.split_signal(adata, var_key=\"channel\", data_type=\"cytof\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Normalize the dataset:"
    ]
   },
   {
@@ -172,6 +218,17 @@
    "outputs": [],
    "source": [
     "pm.tl.normalize_arcsinh(adata, cofactor=150)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{note}\n",
+    "\n",
+    "If the dataset was a flow dataset, you'll also have to compensate the data, if possible. The metadata should contain a compensation matrix, which could then be run by the pytometry compensation function. In the case here, its a cyTOF dataset, which doesn't (really) require compensation. \n",
+    "\n",
+    "```"
    ]
   },
   {
@@ -286,7 +343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use the [Experimental Factor Ontology](https://www.ebi.ac.uk/efo/) through Bionty to create a \"FACS\" label for the dataset:"
+    "We use the [Experimental Factor Ontology](https://www.ebi.ac.uk/efo/) through Bionty to create a \"FACS\" label:"
    ]
   },
   {
@@ -299,15 +356,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We found one for \"FACS\", let's save it to our in-house registry:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import the record from the public ontology and save it to the registry\n",
-    "lb.ExperimentalFactor.from_bionty(ontology_id=\"EFO:0009108\").save()\n",
+    "# import the FACS record from the public ontology and save it to the registry\n",
+    "facs = lb.ExperimentalFactor.from_bionty(ontology_id=\"EFO:0009108\")\n",
+    "facs.save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " We don't find one for \"CyToF\", however, so, let's create it without importing from a public ontology but label it as a child of \"is_cytometry_assay\":"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cytof = lb.ExperimentalFactor(name=\"CyTOF\")\n",
+    "cytof.save()\n",
+    "is_cytometry_assay = lb.ExperimentalFactor(name=\"is_cytometry_assay\")\n",
+    "is_cytometry_assay.save()\n",
+    "cytof.parents.add(is_cytometry_assay)\n",
+    "facs.parents.add(is_cytometry_assay)\n",
     "\n",
-    "# show the content of the registry\n",
+    "is_cytometry_assay.view_parents(with_children=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us look at the content of the registry:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "lb.ExperimentalFactor.filter().df()"
    ]
   },
@@ -327,7 +428,7 @@
    "source": [
     "modalities = ln.Modality.lookup()\n",
     "features = ln.Feature.lookup()\n",
-    "efs = lb.ExperimentalFactor.lookup()\n",
+    "experimental_factors = lb.ExperimentalFactor.lookup()\n",
     "species = lb.Species.lookup()"
    ]
   },
@@ -398,7 +499,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use auto-complete for marker names:"
+    "Use auto-complete for marker names in the `var` featureset:"
    ]
   },
   {
@@ -416,10 +517,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "markers.cd14"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In a plot, we can now easily also show gene symbol and Uniprot ID:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import scanpy as sc\n",
     "\n",
     "sc.pp.pca(adata)\n",
-    "sc.pl.pca(adata, color=markers.cd14.name)"
+    "sc.pl.pca(\n",
+    "    adata,\n",
+    "    color=markers.cd14.name,\n",
+    "    title=(\n",
+    "        f\"{markers.cd14.name} / {markers.cd14.gene_symbol} /\"\n",
+    "        f\" {markers.cd14.uniprotkb_id}\"\n",
+    "    ),\n",
+    ")"
    ]
   },
   {
@@ -444,7 +568,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = ln.Dataset(file, name=\"My versioned FACS dataset\", version=\"1\")\n",
+    "dataset = ln.Dataset(file, name=\"My versioned cytometry dataset\", version=\"1\")\n",
     "\n",
     "dataset"
    ]
@@ -485,7 +609,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Annotate by linking FACS & species labels:"
+    "Annotate by linking cytof & species labels:"
    ]
   },
   {
@@ -494,7 +618,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.labels.add(efs.fluorescence_activated_cell_sorting, features.assay)\n",
+    "dataset.labels.add(experimental_factors.cytof, features.assay)\n",
     "dataset.labels.add(species.human, features.species)"
    ]
   },
