--- a/docs/facs1.ipynb
+++ b/docs/facs1.ipynb
@@ -111,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pm.tl.normalize_arcsinh(adata, cofactor=150)"
+    "pm.tl.normalize_biExp(adata)"
    ]
   },
   {
@@ -327,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_v1 = ln.Dataset.filter(name=\"My versioned FACS dataset\").one()"
+    "dataset_v1 = ln.Dataset.filter(name=\"My versioned cytometry dataset\").one()"
    ]
   },
   {
