--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyze a sharded dataset"
+    "# Analyze the dataset and save a result"
    ]
   },
   {
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = ln.Dataset.filter(name=\"My versioned FACS dataset\", version=\"2\").one()"
+    "dataset = ln.Dataset.filter(name=\"My versioned cytometry dataset\", version=\"2\").one()"
    ]
   },
   {
@@ -103,8 +103,7 @@
     "import scanpy as sc\n",
     "\n",
     "sc.pp.pca(adata)\n",
-    "sc.pl.pca(adata, color=markers.cd14.name, save=\"_cd14\")\n",
-    "filepath = \"figures/pca_cd14\""
+    "sc.pl.pca(adata, color=markers.cd14.name, save=\"_cd14\")"
    ]
   },
   {
@@ -113,15 +112,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File(\"./figures/pca_cd14.pdf\", description=\"My result on CD14\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "file = ln.File(\"./figures/pca_cd14.pdf\", description=\"My result on CD14\")\n",
+    "\n",
     "file.save()"
    ]
   },
@@ -132,6 +124,17 @@
    "outputs": [],
    "source": [
     "file.view_flow()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given the image is part of the notebook, there isn't an actual need to save it and you can also rely on the report that you'll create when saving the notebook via the command line via:\n",
+    "\n",
+    "```\n",
+    "lamin save <notebook_path>\n",
+    "```"
    ]
   },
   {
