💄 Add badges for nb series

--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Flow cytometry"
+    "# Flow cytometry ![facs1/4](https://img.shields.io/badge/facs1/4-lightgrey)"
    ]
   },
   {
@@ -29,10 +29,10 @@
    "source": [
     "Specifically, you will\n",
     "\n",
-    "1. read a single `.fcs` file as an `AnnData` and seed a versioned dataset with it\n",
-    "2. append a new data batch (a new `.fcs` file) to create a new version of the dataset ([here](facs1))\n",
-    "3. query individual files and cell markers ([here](facs2))\n",
-    "4. analyze the dataset and store results as plots ([here](facs3))\n",
+    "1. read a single `.fcs` file as an `AnnData` and seed a versioned dataset with it (![facs1/4](https://img.shields.io/badge/facs1/4-lightgrey), current page)\n",
+    "2. append a new data batch (a new `.fcs` file) to create a new version of the dataset ([![facs2/4](https://img.shields.io/badge/facs2/4-lightgrey)](facs1))\n",
+    "3. query individual files and cell markers ([![facs3/4](https://img.shields.io/badge/facs3/4-lightgrey)](facs2))\n",
+    "4. analyze the dataset and store results as plots ([![facs4/4](https://img.shields.io/badge/facs4/4-lightgrey)](facs3))\n",
     "\n",
     "```{toctree}\n",
     ":maxdepth: 1\n",
