--- a/docs/facs1.ipynb
+++ b/docs/facs1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Append a new batch of data"
+    "# Append a new batch of data ![facs2/4](https://img.shields.io/badge/facs2/4-lightgrey)"
    ]
   },
   {
