--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyze the dataset and save a result"
+    "# Analyze the dataset and save a result ![facs4/4](https://img.shields.io/badge/facs4/4-lightgrey)"
    ]
   },
   {
