--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Query & integrate data"
+    "# Query & integrate data ![facs3/4](https://img.shields.io/badge/facs3/4-lightgrey)"
    ]
   },
   {
