💄 Put badges above title

--- a/docs/facs1.ipynb
+++ b/docs/facs1.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![facs2/4](https://img.shields.io/badge/facs2/4-lightgrey)\n",
     "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/facs1.ipynb)"
    ]
   },
@@ -11,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Append a new batch of data ![facs2/4](https://img.shields.io/badge/facs2/4-lightgrey)"
+    "# Append a new batch of data"
    ]
   },
   {
