--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![facs3/4](https://img.shields.io/badge/facs3/4-lightgrey)\n",
     "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/facs2.ipynb)"
    ]
   },
@@ -11,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Query & integrate data ![facs3/4](https://img.shields.io/badge/facs3/4-lightgrey)"
+    "# Query & integrate data"
    ]
   },
   {
