--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![facs1/4](https://img.shields.io/badge/facs1/4-lightgrey)\n",
     "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/facs.ipynb)\n",
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/laminlabs/lamin-usecases/main?labpath=lamin-usecases%2Fdocs%2Ffacs.ipynb)"
    ]
@@ -13,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Flow cytometry ![facs1/4](https://img.shields.io/badge/facs1/4-lightgrey)"
+    "# Flow cytometry"
    ]
   },
   {
