--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![facs4/4](https://img.shields.io/badge/facs4/4-lightgrey)\n",
     "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/facs3.ipynb)"
    ]
   },
@@ -11,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyze the dataset and save a result ![facs4/4](https://img.shields.io/badge/facs4/4-lightgrey)"
+    "# Analyze the dataset and save a result"
    ]
   },
   {
