🚚 Rename notebook series

--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -4,15 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![facs3/4](https://img.shields.io/badge/facs3/4-lightgrey)\n",
-    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/facs2.ipynb)"
+    "![facs2/4](https://img.shields.io/badge/facs2/4-lightgrey)\n",
+    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/facs1.ipynb)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Query & integrate data"
+    "# Append a new batch of data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have one file in storage and are about to receive a new batch of data.\n",
+    "\n",
+    "In this notebook, we'll see how to manage the situation."
    ]
   },
   {
@@ -23,6 +32,7 @@
    "source": [
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
+    "import readfcs\n",
     "\n",
     "lb.settings.species = \"human\""
    ]
@@ -40,14 +50,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inspect the CellMarker registry ![](https://img.shields.io/badge/Access-10b981) "
+    "## Ingest a new file"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inspect your aggregated cell marker registry as a `DataFrame`:"
+    "### Access ![](https://img.shields.io/badge/Access-10b981)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us validate and register another `.fcs` file:"
    ]
   },
   {
@@ -56,80 +73,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellMarker.filter().df().head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Search for a marker (synonyms aware):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lb.CellMarker.search(\"PD-1\").head(2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Look up markers with auto-complete:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "markers = lb.CellMarker.lookup()\n",
+    "filepath = ln.dev.datasets.file_fcs()\n",
     "\n",
-    "markers.cd14"
+    "adata = readfcs.read(filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Query files by markers ![](https://img.shields.io/badge/Access-10b981) "
+    "## Transform: normalize ![](https://img.shields.io/badge/Transform-10b981)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import anndata as ad\n",
+    "import pytometry as pm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pm.pp.split_signal(adata, var_key=\"channel\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pm.tl.normalize_biExp(adata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata = adata[  # subset to rows that do not have nan values\n",
+    "    adata.to_df().isna().sum(axis=1) == 0\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata.to_df().describe()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Query panels and datasets based on markers, e.g., which datasets have `'CD14'` in the flow panel:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "panels_with_cd14 = ln.FeatureSet.filter(cell_markers=markers.cd14).all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.File.filter(feature_sets__in=panels_with_cd14).df()"
+    "### Validate cell markers ![](https://img.shields.io/badge/Validate-10b981) "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Access registries:"
+    "Let's see how many markers validate:"
    ]
   },
   {
@@ -138,14 +162,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = ln.Feature.lookup()"
+    "validated = lb.CellMarker.validate(adata.var.index)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Find shared cell markers between two files:"
+    "Let's standardize and re-validate:"
    ]
   },
   {
@@ -154,8 +178,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = ln.File.filter(feature_sets__in=panels_with_cd14).list()\n",
-    "file1, file2 = files[0], files[1]"
+    "adata.var.index = lb.CellMarker.standardize(adata.var.index)\n",
+    "validated = lb.CellMarker.validate(adata.var.index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, register non-validated markers from Bionty:"
    ]
   },
   {
@@ -164,8 +195,213 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shared_markers = file1.features[\"var\"] & file2.features[\"var\"]\n",
-    "shared_markers.list(\"name\")"
+    "records = lb.CellMarker.from_values(adata.var.index[~validated])\n",
+    "ln.save(records)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now they pass validation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "validated = lb.CellMarker.validate(adata.var.index)\n",
+    "assert all(validated)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Register ![](https://img.shields.io/badge/Register-10b981) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modalities = ln.Modality.lookup()\n",
+    "features = ln.Feature.lookup()\n",
+    "efs = lb.ExperimentalFactor.lookup()\n",
+    "species = lb.Species.lookup()\n",
+    "markers = lb.CellMarker.lookup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = ln.File.from_anndata(\n",
+    "    adata,\n",
+    "    description=\"Flow cytometry file 2\",\n",
+    "    field=lb.CellMarker.name,\n",
+    "    modality=modalities.protein,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.labels.add(efs.fluorescence_activated_cell_sorting, features.assay)\n",
+    "file.labels.add(species.human, features.species)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "View data flow:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.view_flow()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inspect a PCA fo QC - this dataset looks much like noise:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scanpy as sc\n",
+    "\n",
+    "sc.pp.pca(adata)\n",
+    "sc.pl.pca(adata, color=markers.cd14.name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a new version of the dataset by appending a file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Query the old version:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_v1 = ln.Dataset.filter(name=\"My versioned cytometry dataset\").one()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_v2 = ln.Dataset(\n",
+    "    [file, dataset_v1.file], is_new_version_of=dataset_v1, version=\"2\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_v2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_v2.features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_v2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_v2.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_v2.labels.add(efs.fluorescence_activated_cell_sorting, features.assay)\n",
+    "dataset_v2.labels.add(species.human, features.species)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_v2.view_flow()"
    ]
   }
  ],
@@ -188,10 +424,10 @@
    "version": "3.9.16"
   },
   "nbproject": {
-   "id": "wukchS8V976U",
+   "id": "SmQmhrhigFPL",
    "parent": null,
    "pypackage": null,
-   "time_init": "2023-09-22T13:30:35.147418+00:00",
+   "time_init": "2023-09-22T10:55:35.193041+00:00",
    "user_handle": null,
    "user_id": null,
    "user_name": null,
