--- a/docs/facs4.ipynb
+++ b/docs/facs4.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![facs3/4](https://img.shields.io/badge/facs3/4-lightgrey)\n",
-    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/facs2.ipynb)"
+    "![facs4/4](https://img.shields.io/badge/facs4/4-lightgrey)\n",
+    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/facs3.ipynb)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Query & integrate data"
+    "# Analyze the dataset and save a result"
    ]
   },
   {
@@ -24,30 +24,16 @@
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
     "\n",
-    "lb.settings.species = \"human\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "ln.track()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Inspect the CellMarker registry ![](https://img.shields.io/badge/Access-10b981) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Inspect your aggregated cell marker registry as a `DataFrame`:"
+    "ln.Dataset.filter().df()"
    ]
   },
   {
@@ -56,14 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellMarker.filter().df().head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Search for a marker (synonyms aware):"
+    "dataset = ln.Dataset.filter(name=\"My versioned cytometry dataset\", version=\"2\").one()"
    ]
   },
   {
@@ -72,14 +51,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellMarker.search(\"PD-1\").head(2)"
+    "adata = dataset.load(join=\"inner\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Look up markers with auto-complete:"
+    "The `AnnData` has the reference to the individual files in the `.obs` annotations:"
    ]
   },
   {
@@ -88,32 +67,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "markers = lb.CellMarker.lookup()\n",
+    "adata.obs.file_id.cat.categories"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By default, the intersection of features is used:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata.var.index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us create a plot:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "markers = lb.CellMarker.lookup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scanpy as sc\n",
     "\n",
-    "markers.cd14"
+    "sc.pp.pca(adata)\n",
+    "sc.pl.pca(adata, color=markers.cd14.name, save=\"_cd14\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = ln.File(\"./figures/pca_cd14.pdf\", description=\"My result on CD14\")\n",
+    "\n",
+    "file.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.view_flow()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Query files by markers ![](https://img.shields.io/badge/Access-10b981) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Query panels and datasets based on markers, e.g., which datasets have `'CD14'` in the flow panel:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "panels_with_cd14 = ln.FeatureSet.filter(cell_markers=markers.cd14).all()"
+    "Given the image is part of the notebook, there isn't an actual need to save it and you can also rely on the report that you'll create when saving the notebook via the command line via:\n",
+    "\n",
+    "```\n",
+    "lamin save <notebook_path>\n",
+    "```"
    ]
   },
   {
@@ -122,50 +151,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.File.filter(feature_sets__in=panels_with_cd14).df()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Access registries:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features = ln.Feature.lookup()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Find shared cell markers between two files:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files = ln.File.filter(feature_sets__in=panels_with_cd14).list()\n",
-    "file1, file2 = files[0], files[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shared_markers = file1.features[\"var\"] & file2.features[\"var\"]\n",
-    "shared_markers.list(\"name\")"
+    "# clean up test instance\n",
+    "!lamin delete --force test-facs\n",
+    "!rm -r test-flow"
    ]
   }
  ],
@@ -188,10 +176,10 @@
    "version": "3.9.16"
   },
   "nbproject": {
-   "id": "wukchS8V976U",
+   "id": "zzJzdgJ763Dy",
    "parent": null,
    "pypackage": null,
-   "time_init": "2023-09-22T13:30:35.147418+00:00",
+   "time_init": "2023-09-26T11:39:41.987891+00:00",
    "user_handle": null,
    "user_id": null,
    "user_name": null,
