🍱 Updated facs dataset to use Oetjen18

--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us validate and register another `.fcs` file:"
+    "Let us validate and register another `.fcs` file from [Oetjen18](https://insight.jci.org/articles/view/124928):"
    ]
   },
   {
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = ln.dev.datasets.file_fcs()\n",
+    "filepath = readfcs.datasets.Oetjen18_t1()\n",
     "\n",
     "adata = readfcs.read(filepath)"
    ]
@@ -111,6 +111,15 @@
    "outputs": [],
    "source": [
     "pm.pp.split_signal(adata, var_key=\"channel\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pm.pp.compensate(adata)"
    ]
   },
   {
@@ -203,6 +212,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Manually create 2 markers:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dead = lb.CellMarker.filter(name=\"Dead\").one()\n",
+    "dead.add_synonym(\"LIVE/DEAD\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata.var.index = lb.CellMarker.standardize(adata.var.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.CellMarker(name=\"CD14/19\").save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now they pass validation:"
    ]
   },
@@ -241,12 +285,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "file = ln.File.from_anndata(\n",
     "    adata,\n",
-    "    description=\"Flow cytometry file 2\",\n",
+    "    description=\"Oetjen18_t1\",\n",
     "    field=lb.CellMarker.name,\n",
     "    modality=modalities.protein,\n",
     ")"
@@ -312,7 +360,7 @@
     "import scanpy as sc\n",
     "\n",
     "sc.pp.pca(adata)\n",
-    "sc.pl.pca(adata, color=markers.cd14.name)"
+    "sc.pl.pca(adata, color=markers.cd8.name)"
    ]
   },
   {
