🍱 Saved all facs nbs

--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "![facs2/4](https://img.shields.io/badge/facs2/4-lightgrey)\n",
-    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/facs2.ipynb)"
+    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/facs2.ipynb)\n",
+    "[![lamindata](https://img.shields.io/badge/laminlabs/lamindata-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/record/core/Transform?id=SmQmhrhigFPLz8)"
    ]
   },
   {
@@ -212,26 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Manually create 2 markers:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dead = lb.CellMarker.filter(name=\"Dead\").one()\n",
-    "dead.add_synonym(\"LIVE/DEAD\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata.var.index = lb.CellMarker.standardize(adata.var.index)"
+    "Manually create 1 marker:"
    ]
   },
   {
@@ -247,7 +229,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now they pass validation:"
+    "Move metadata to obs:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validated = lb.CellMarker.validate(adata.var.index)\n",
+    "adata.obs = adata[:, ~validated].to_df()\n",
+    "adata = adata[:, validated].copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now all markers pass validation:"
    ]
   },
   {
