🍱 Saved scrna notebooks to lamindata (#74)

--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "![facs2/4](https://img.shields.io/badge/facs2/4-lightgrey)\n",
-    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/facs2.ipynb)"
+    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/facs2.ipynb)\n",
+    "[![lamindata](https://img.shields.io/badge/laminlabs/lamindata-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/record/core/Transform?id=SmQmhrhigFPLz8)"
    ]
   },
   {
@@ -64,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us validate and register another `.fcs` file:"
+    "Let us validate and register another `.fcs` file from [Oetjen18](https://insight.jci.org/articles/view/124928):"
    ]
   },
   {
@@ -73,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = ln.dev.datasets.file_fcs()\n",
+    "filepath = readfcs.datasets.Oetjen18_t1()\n",
     "\n",
     "adata = readfcs.read(filepath)"
    ]
@@ -111,6 +112,15 @@
    "outputs": [],
    "source": [
     "pm.pp.split_signal(adata, var_key=\"channel\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pm.pp.compensate(adata)"
    ]
   },
   {
@@ -203,7 +213,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now they pass validation:"
+    "Manually create 1 marker:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.CellMarker(name=\"CD14/19\").save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Move metadata to obs:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validated = lb.CellMarker.validate(adata.var.index)\n",
+    "adata.obs = adata[:, ~validated].to_df()\n",
+    "adata = adata[:, validated].copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now all markers pass validation:"
    ]
   },
   {
@@ -241,12 +285,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "file = ln.File.from_anndata(\n",
     "    adata,\n",
-    "    description=\"Flow cytometry file 2\",\n",
+    "    description=\"Oetjen18_t1\",\n",
     "    field=lb.CellMarker.name,\n",
     "    modality=modalities.protein,\n",
     ")"
@@ -312,7 +360,7 @@
     "import scanpy as sc\n",
     "\n",
     "sc.pp.pca(adata)\n",
-    "sc.pl.pca(adata, color=markers.cd14.name)"
+    "sc.pl.pca(adata, color=markers.cd8.name)"
    ]
   },
   {
