--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "![facs3/4](https://img.shields.io/badge/facs3/4-lightgrey)\n",
-    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/facs2.ipynb)"
+    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/facs2.ipynb)\n",
+    "[![lamindata](https://img.shields.io/badge/laminlabs/lamindata-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/record/core/Transform?id=wukchS8V976Uz8)"
    ]
   },
   {
@@ -90,7 +91,7 @@
    "source": [
     "markers = lb.CellMarker.lookup()\n",
     "\n",
-    "markers.cd14"
+    "markers.cd8"
    ]
   },
   {
@@ -104,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Query panels and datasets based on markers, e.g., which datasets have `'CD14'` in the flow panel:"
+    "Query panels and datasets based on markers, e.g., which datasets have `'CD8'` in the flow panel:"
    ]
   },
   {
@@ -113,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "panels_with_cd14 = ln.FeatureSet.filter(cell_markers=markers.cd14).all()"
+    "panels_with_cd8 = ln.FeatureSet.filter(cell_markers=markers.cd8).all()"
    ]
   },
   {
@@ -122,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.File.filter(feature_sets__in=panels_with_cd14).df()"
+    "ln.File.filter(feature_sets__in=panels_with_cd8).df()"
    ]
   },
   {
@@ -154,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = ln.File.filter(feature_sets__in=panels_with_cd14).list()\n",
+    "files = ln.File.filter(feature_sets__in=panels_with_cd8).list()\n",
     "file1, file2 = files[0], files[1]"
    ]
   },
