--- a/docs/facs4.ipynb
+++ b/docs/facs4.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "![facs4/4](https://img.shields.io/badge/facs4/4-lightgrey)\n",
-    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/facs3.ipynb)"
+    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/facs3.ipynb)\n",
+    "[![lamindata](https://img.shields.io/badge/laminlabs/lamindata-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/record/core/Transform?id=zzJzdgJ763Dyz8)"
    ]
   },
   {
@@ -111,7 +112,7 @@
     "import scanpy as sc\n",
     "\n",
     "sc.pp.pca(adata)\n",
-    "sc.pl.pca(adata, color=markers.cd14.name, save=\"_cd14\")"
+    "sc.pl.pca(adata, color=markers.cd8.name, save=\"_cd8\")"
    ]
   },
   {
@@ -120,7 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File(\"./figures/pca_cd14.pdf\", description=\"My result on CD14\")\n",
+    "file = ln.File(\"./figures/pca_cd8.pdf\", description=\"My result on CD8\")\n",
     "\n",
     "file.save()"
    ]
