💚 Try to fix CI

--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -471,7 +471,7 @@
    },
    "outputs": [],
    "source": [
-    "records = set(records_names.values())\n",
+    "records = records_names.values()\n",
     "\n",
     "ln.save(records)"
    ]
