--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -580,16 +580,8 @@
    "source": [
     "file = ln.File.from_anndata(\n",
     "    adata_ba, description=\"seurat_ifnb_activated_Bcells\", field=lb.Gene.symbol\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.save(file)"
+    ")\n",
+    "file.save()"
    ]
   },
   {
