--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "![facs2/4](https://img.shields.io/badge/facs2/4-lightgrey)\n",
     "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/facs2.ipynb)\n",
-    "[![lamindata](https://img.shields.io/badge/laminlabs/lamindata-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/record/core/Transform?id=SmQmhrhigFPLz8)"
+    "[![lamindata](https://img.shields.io/badge/laminlabs/lamindata-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/record/core/Transform?uid=SmQmhrhigFPLz8)"
    ]
   },
   {
